--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     -->
     <title>React App</title>
   </head>
+  <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
