--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
