update đường dẫn chấm công bị lỗi

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         
         <meta
             name="description"
-            content="Ứng dụng quản lý và báo cáo lợi nhuận nội bộ."
+            content="Ứng dụng quản lý hệ thống ERP"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -21,7 +21,7 @@
             rel="stylesheet"
         />
 
-        <title>Báo cáo Lợi nhuận</title>
+        <title>BÁCH KHOA ERP SYSTEM</title>
     </head>
     <body>
         <noscript>Bạn cần bật JavaScript để chạy ứng dụng này.</noscript>
