feat: Chuyển dự án sang Vite, dọn dẹp dependencies

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
         <meta name="theme-color" content="#1976d2" /> 
@@ -11,8 +11,8 @@
             name="description"
             content="Ứng dụng quản lý hệ thống ERP"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link rel="apple-touch-icon" href="/logo192.png" />
+        <link rel="manifest" href="/manifest.json" />
         
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,5 +26,7 @@
     <body>
         <noscript>Bạn cần bật JavaScript để chạy ứng dụng này.</noscript>
         <div id="root"></div>
+
+        <script type="module" src="/src/index.jsx"></script>
     </body>
 </html>
