--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('/firebase-messaging-sw.js')
                     .then((registration) => {
                         console.log('[PWA] Service Worker registered:', registration.scope);
                     })
